@@ -6,8 +6,9 @@
 # file, you can obtain one at https://mozilla.org/MPL/2.0/.
 #
 
-Hedgehog 2.4.0rc2 - 2016-11-02
+Hedgehog 2.4.0rc3 - 2016-11-02
 ----------------------------
+* renamed Node Statistics to Query Statistics in plot dropdown
 * Add new graph for Server IP address vs transport (UDP/TCP)
 * Changed license to MPL
 * Added ability to re-name and remove nodes
